--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ var _hmt = _hmt || [];
 </div>
 <div class="return_top"><a href="javascript:void(0)"></a></div>
 <div class="footer">
-	<a  >何帅个人博客</a>&nbsp;&nbsp;|&nbsp;&nbsp;QQ:2281444815 &nbsp;&nbsp;|&nbsp;&nbsp;网站开发者：何帅
+	<a  >CYD个人博客</a>&nbsp;&nbsp;|&nbsp;&nbsp;QQ:956493741 &nbsp;&nbsp;|&nbsp;&nbsp;design by CYD cover by 何帅
 </div>
 <!--con end-->
 <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"3","bdPos":"left","bdTop":"250"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
